<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inputTextLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg01_wood"
    android:padding="@dimen/dialog_margin"
    tools:context=".dialogs.InputTextActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/inputTextTextDesc"
        style="@style/label_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/input_text_view_desc_def" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputTextEditText"
        style="@style/content_square_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputTextTextDesc"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck"
        tools:text="@string/input_text_view_desc_def" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/inputTextButOk"
        style="@style/but_green_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_but_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inputTextButCancel"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/inputTextButCancel"
        style="@style/but_red_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/but_margin"
        android:text="@string/dialog_but_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputTextEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>